--- a/app/legal.html
+++ b/app/legal.html
@@ -27,9 +27,8 @@
   <header id="header" class="page-header">
       <div class="page-header__wrapper active">
         <h1 class="visually-hidden">Travel2Buissnes - Регион сервиc</h1>
-        <a href="#offer" class="page-header__logo logo">
+        <a href="index.html" class="page-header__logo logo">
           <img class="logo__img" data-logo="blue" src="img/logo.svg" alt="Логотип компании - Travel2Buissnes">
-          <img class="logo__img--dark active" data-logo="red" src="img/logo-dark.svg" alt="Темный логотип компании - Travel2Buissnes">
         </a>
         <nav class="page-header__navigation nav">
           <ul class="nav__list" id="menu">
@@ -73,19 +72,10 @@
            ОКПО 65960024    ОКВЭД  63.30, 74.1   ОКАТО 40288564000   ОКТМО 40393000</p>
           <p class="legal__text">Генеральный директор: Виноградов Сергей Васильевич</p>
           <p class="legal__text">Свидетельство Ростуризма о включении в Федеральный реестр туроператоров РТО №010799</p>
-          <img src="#" alt="лицензия" class="legal__image">
+          <img src="img/license.jpg" alt="лицензия" class="legal__image" width="530" height="774">
       </div>
     </section>
   </main>
-  <footer class="page-footer">
-    <div class="page-footer__wrapper">
-      <div class="page-footer__item">
-            <p class="page-footer__text">Санкт-Петербург, ул. Профессора Попова, д. 23</p>
-            <a class="page-footer__phone" href="tel:+78126221571">+7 (812) 622 15 71</a>
-            <a class="page-footer__email" href="mailto:info@travel2business.ru">info@travel2business.ru</a>
-          </div>
-    </div>
-  </footer>
 
   <script src="libs/jquery/dist/jquery.min.js"></script>
   <script src="libs/svgxuse/svgxuse.min.js"></script>
