--- a/app/index.html
+++ b/app/index.html
@@ -16,7 +16,7 @@
   <meta name="msapplication-navbutton-color" content="#000">
   <!-- iOS Safari -->
   <meta name="apple-mobile-web-app-status-bar-style" content="#000">
-  <title>Travel2Buissnes - Регион сервиc</title>
+  <title>Агенство Travel2Buissnes</title>
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700" rel="stylesheet">
   <link rel="stylesheet" href="css/libs.css">
 <!--   <link rel="stylesheet" href="css/libs.min.css"> -->
@@ -292,22 +292,31 @@
           <div class="reviews__clients clients">
             <ul id="clientSlider" class="clients__list">
               <li class="clients__item">
-                <img src="img/clients/gazprom.jpg" alt="lukoil" width="120" height="56">
+                <img src="img/clients/gazprom.jpg" alt="lukoil" width="200" height="100">
               </li>
               <li class="clients__item">
-                <img src="img/clients/lukoil.jpg" alt="nmlk" width="247" height="56">
+                <img src="img/clients/lukoil.jpg" alt="nmlk" width="200" height="100">
               </li>
               <li class="clients__item">
-                <img src="img/clients/nmlk.jpg" alt="purneftegaz" width="122" height="56">
+                <img src="img/clients/nmlk.jpg" alt="purneftegaz" width="200" height="100">
               </li>
               <li class="clients__item">
-                <img src="img/clients/gis.jpg" alt="gis" width="123" height="56">
+                <img src="img/clients/gis.jpg" alt="gis" width="200" height="100">
               </li>
               <li class="clients__item">
-                <img src="img/clients/purneftegaz.jpg" alt="cpr" width="166" height="56">
+                <img src="img/clients/purneftegaz.jpg" alt="cpr" width="200" height="100">
               </li>
               <li class="clients__item">
-                <img src="img/clients/cpr.jpg" alt="gazprom" width="66" height="56">
+                <img src="img/clients/cpr.jpg" alt="gazprom" width="200" height="100">
+              </li>
+              <li class="clients__item">
+                <img src="img/clients/sibntek.png" alt="sibntek" width="200" height="100">
+              </li>
+              <li class="clients__item">
+                <img src="img/clients/metafraks.png" alt="metafraks" width="200" height="100">
+              </li>
+              <li class="clients__item">
+                <img src="img/clients/btctext.jpg" alt="btctext" width="200" height="100">
               </li>
             </ul>
           </div>
@@ -334,19 +343,19 @@
                     <use xlink:href="img/svg-sprite.svg#icon-instagram"></use>
                   </svg>
                 </a></li>
-                <li class="social__item"><a href="https://facebook.com" class="social__link social__link--facebook">
+                <li class="social__item"><a href="https://www.facebook.com/Travel2Business.ru" target="_blank" class="social__link social__link--facebook">
                   <svg width="13" height="25">
                     <use xlink:href="img/svg-sprite.svg#icon-facebook"></use>
                   </svg>
                 </a></li>
               </ul>
               <div class="social__private">
-                <a href="legal.html">Юридическая информация</a>
+                <a href="legal.html" target="_blank">Юридическая информация</a>
               </div>
             </div>
           </div>
           <div class="contacts__form form">
-            <form id="form" class="form__inputs" action="#" method="post">
+            <form id="form" class="form__inputs" action="mail.php" method="post">
               <h2 class="form__title">Оставить заявку</h2>
               <h2 class="form__title-mobile">Оставить заявку</h2>
               <label class="form__lable" for="name">
@@ -362,7 +371,7 @@
                 <textarea class="form__textarea" name="inputTextarea" id="comment" rows="2" required></textarea>
               </label>
               <input class="form__checkbox" name="inputCheckbox" id="agree" type="checkbox" required>
-              <label class="form__check-lable" for="agree">Принимаю <a class="form__link" href="policy.html">политику конфиденциальности</a></label>
+              <label class="form__check-lable" for="agree"><span class="form__check-item"></span>Принимаю <a class="form__link" target="_blank" href="policy.html">политику конфиденциальности</a></label>
               <button type="submit" form="form" class="form__button button">Отправить</button>
             </form>
           </div>
