--- a/app/policy.html
+++ b/app/policy.html
@@ -16,7 +16,7 @@
   <meta name="msapplication-navbutton-color" content="#000">
   <!-- iOS Safari -->
   <meta name="apple-mobile-web-app-status-bar-style" content="#000">
-  <title>Travel2Buissnes - Регион сервиc</title>
+  <title>Агенство - Travel2Buissnes</title>
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700" rel="stylesheet">
   <link rel="stylesheet" href="css/libs.css">
 <!--   <link rel="stylesheet" href="css/libs.min.css"> -->
@@ -27,35 +27,35 @@
   <header id="header" class="page-header">
       <div class="page-header__wrapper active">
         <h1 class="visually-hidden">Travel2Buissnes - Регион сервиc</h1>
-        <a href="index.html" class="page-header__logo logo">
-          <img class="logo__img" data-logo="blue" src="img/logo.svg" alt="Логотип компании - Travel2Buissnes">
+        <a href="index.html" data-menuanchor="offer" class="page-header__logo logo">
+          <img class="logo__img active" data-logo="blue" src="img/logo.svg" alt="Логотип компании - Travel2Buissnes">
         </a>
         <nav class="page-header__navigation nav">
           <ul class="nav__list" id="menu">
-            <li data-menuanchor="about" class="nav__item"><a href="index.html#about" class="nav__link">О компании</a></li>
-            <li data-menuanchor="advantages" class="nav__item"><a href="index.html#advantages" class="nav__link">Почему мы</a></li>
-            <li data-menuanchor="reviews" class="nav__item"><a href="index.html#reviews" class="nav__link">Отзывы</a></li>
-            <li data-menuanchor="contacts" class="nav__item"><a href="index.html#contacts" class="nav__link">Контакты</a></li>
+            <li class="nav__item" data-menuanchor="about"><a href="index.html#about" class="nav__link">О компании</a></li>
+            <li class="nav__item" data-menuanchor="advantages" ><a href="index.html#advantages" class="nav__link">Почему мы</a></li>
+            <li class="nav__item" data-menuanchor="reviews"><a href="index.html#reviews" class="nav__link">Отзывы</a></li>
+            <li class="nav__item" data-menuanchor="contacts"><a href="index.html#contacts" class="nav__link">Контакты</a></li>
           </ul>
         </nav>
         <div class="mobile-menu js-mobile-menu">
           <button class="menu-btn">
             <span class="burger"></span>
           </button>
-          <div class="m-menu">
+          <div id="mobileMenu" class="m-menu">
             <ul class="m-menu__list">
-              <li data-menuanchor="about" class="m-menu__item"><a href="index.html#about" class="m-menu__link">О компании</a></li>
-              <li data-menuanchor="about" class="m-menu__item"><a href="index.html#offerBottom" class="m-menu__link">Услуги</a></li>
-              <li data-menuanchor="advantages" class="m-menu__item"><a href="index.html#advantages" class="m-menu__link">Почему мы</a></li>
-              <li data-menuanchor="reviews" class="m-menu__item"><a href="index.html#reviews" class="m-menu__link">Отзывы</a></li>
-              <li data-menuanchor="contacts" class="m-menu__item"><a href="index.html#contacts" class="m-menu__link">Контакты</a></li>
+              <li class="m-menu__item" data-menuanchor="about"><a href="index.html#about" class="m-menu__link">О компании</a></li>
+              <li class="m-menu__item" data-menuanchor="offerBottom"><a href="index.html#offerBottom" class="m-menu__link">Услуги</a></li>
+              <li class="m-menu__item" data-menuanchor="advantages"><a href="index.html#advantages" class="m-menu__link">Почему мы</a></li>
+              <li class="m-menu__item" data-menuanchor="reviews"><a href="index.html#reviews" class="m-menu__link">Отзывы</a></li>
+              <li class="m-menu__item" data-menuanchor="contacts"><a href="index.html#contacts" class="m-menu__link">Контакты</a></li>
             </ul>
             <a href="tel:+7(812)6221571" class="m-menu__phone">+7 812 622 15 71</a>
             <a href="mailto:info@travel2business.ru" class="m-menu__email">info@travel2business.ru</a>
           </div>
         </div>
         <div class="page-header__links links-buttons">
-          <a href="#form" class="links-buttons__phone button">+7 812 622 15 71</a>
+          <a href="tel:+7(812)6221571" class="links-buttons__phone button">+7 812 622 15 71</a>
           <a href="mailto:info@travel2business.ru" class="links-buttons__email button">info@travel2business.ru</a>
         </div>
       </div>
@@ -63,7 +63,7 @@
   <main>
     <section class="legal">
       <div class="legal__wrapper">
-        <h1 class="legal__title">Согласие на обработку персональ­ных данных</h1>
+        <h1 class="legal__title">Согласие на обработку персональных данных</h1>
         <p class="legal__text">Политика в отношении обработки персональных данных<br>
         <br>
           1. Общие положения<br>  
@@ -129,12 +129,12 @@
       </div>
     </section>
   </main>
-
-  <script src="libs/jquery/dist/jquery.min.js"></script>
+  <script src="libs/jquery/jquery.min.js"></script>
   <script src="libs/svgxuse/svgxuse.min.js"></script>
   <script src="libs/validate/jquery.validate.min.js"></script>
   <script src="libs/mask/jquery.maskedinput.min.js"></script>
   <script src="libs/fullpage/jquery.fullpage.js"></script>
+  <script src="libs/fullpage/scrolloverflow.min.js"></script>
   <script src="libs/slick/slick.min.js"></script>
   <script src="js/main.js"></script>
 </body>
