--- a/app/index.html
+++ b/app/index.html
@@ -119,11 +119,12 @@
           <h2 class="about__title">О компании</h2>
           <div class="about__left-col">
             <div class="about__text">
-            <p class="about__text-header">Сегодня деловой туризм становится все более востребованным. Командировки
-             в филиалы, профессиональные конференции, обучение в других городах 
+            <p class="about__text-header">Сегодня деловой туризм становится все 
+              более востребованным. Командировки в филиалы, профессиональные конференции,
+             обучение в других городах 
            – это лишь малый перечень того, когда компании сталкиваются с необходимостью
             организации деловых поездок. Поэтому многие компании, чтобы не обременять
-             себя лишними задачами и тратить время на решение данных вопросов выбирают
+             себя лишними задачами и тратить время на решение данных вопросов выбираютю,
               аутсорсинг. </p>
 
             <p>Наша компания – это современное агентство делового туризма. Мы работаем
@@ -140,7 +141,7 @@
               <img src="img/company__img.png" alt="foto">
             </div>
             <div class="about__stats">
-              <p><span>12+</span>лет успешной работы</p>
+              <p><span>10+</span>лет успешной работы</p>
               <p><span>20 000+</span>довольных клиентов</p>
               <p><span>500+</span>бронирований ежемесячно</p>
             </div>
@@ -324,8 +325,7 @@
       <section id="contacts section4" data-anchor="contacts" class="section contacts">
         <div class="contacts__wrapper">
           <div class="contacts__item">
-            <h2 class="contacts__title">Контакты</h2>
-            <p class="contacts__text">Санкт-Петербург,<br> ул. Профессора Попова, д. 23</p>
+            <p class="contacts__text">197376, Санкт-Петербург,<br> ул. Профессора Попова, д. 23</p>
             <a class="contacts__phone" href="tel:+78126221571">+7 (812) 622 15 71</a>
             <a class="contacts__email" href="mailto:info@travel2business.ru">info@travel2business.ru</a>
             <div class="contacts__social social">
