--- a/app/index.html
+++ b/app/index.html
@@ -16,20 +16,19 @@
   <meta name="msapplication-navbutton-color" content="#000">
   <!-- iOS Safari -->
   <meta name="apple-mobile-web-app-status-bar-style" content="#000">
-  <title>Агенство Travel2Buissnes</title>
+  <title>Агенство Travel2Business</title>
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700" rel="stylesheet">
   <link rel="stylesheet" href="css/libs.css">
-<!--   <link rel="stylesheet" href="css/libs.min.css"> -->
   <link rel="stylesheet" href="css/style.css">
-<!--   <link rel="stylesheet" href="css/style.min.css"> -->
 </head>
 <body>
+
   <header id="header" class="page-header">
       <div class="page-header__wrapper active">
-        <h1 class="visually-hidden">Travel2Buissnes - Регион сервиc</h1>
+        <h1 class="visually-hidden">Travel2Business - Агенство</h1>
         <a href="#offer" data-menuanchor="offer" class="page-header__logo logo">
-          <img class="logo__img" data-logo="blue" src="img/logo.svg" alt="Логотип компании - Travel2Buissnes">
-          <img class="logo__img--dark active" data-logo="red" src="img/logo-dark.svg" alt="Темный логотип компании - Travel2Buissnes">
+          <img class="logo__img" data-logo="blue" src="img/logo.svg" alt="Логотип компании - Travel2Business">
+          <img class="logo__img--dark active" data-logo="red" src="img/logo-dark.svg" alt="Темный логотип компании - Travel2Business">
         </a>
         <nav class="page-header__navigation nav">
           <ul class="nav__list" id="menu">
@@ -61,10 +60,15 @@
         </div>
       </div>
   </header>
+
+  <main>
+
     <nav id="fp-nav" class="left">
       <ul></ul>
     </nav>
+
     <div id="fullpage" class="fullpage-wrapper">
+
       <section id="offer section0" data-anchor="offer" class="section offer">
         <div class="offer__wrapper">
           <div class="offer__top">
@@ -114,18 +118,18 @@
           </div>
         </div>
       </section>
+
       <section id="about section1" data-anchor="about" class="section about">
         <div class="about__wrapper">
           <h2 class="about__title">О компании</h2>
           <div class="about__left-col">
             <div class="about__text">
-            <p class="about__text-header">Сегодня деловой туризм становится все 
-              более востребованным. Командировки в филиалы, профессиональные конференции,
-             обучение в других городах 
+            <p class="about__text-header">Сегодня деловой туризм становится все более востребованным. Командировки
+             в филиалы, профессиональные конференции, обучение в других городах 
            – это лишь малый перечень того, когда компании сталкиваются с необходимостью
             организации деловых поездок. Поэтому многие компании, чтобы не обременять
-             себя лишними задачами и тратить время на решение данных вопросов выбираютю,
-              аутсорсинг. </p>
+             себя лишними задачами и тратить время на решение данных вопросов, выбирают
+              аутсорсинг.</p>
 
             <p>Наша компания – это современное агентство делового туризма. Мы работаем
              с 2007 года и предоставляем туристические услуги для корпоративных клиентов.
@@ -142,12 +146,13 @@
             </div>
             <div class="about__stats">
               <p><span>10+</span>лет успешной работы</p>
-              <p><span>20 000+</span>довольных клиентов</p>
+              <p><span>20 000+</span>довольных<br>клиентов</p>
               <p><span>500+</span>бронирований ежемесячно</p>
             </div>
           </div>
         </div>
       </section>
+
       <section id="advantages section2" data-anchor="advantages" class="section advantages">
         <div class="advantages__wrapper">
           <div class="advantages__topline">
@@ -214,6 +219,7 @@
           </div>
         </div>
       </section>
+
       <section id="reviews section3" data-anchor="reviews" class="section reviews">
         <div class="reviews__wrapper">
           <h2 class="reviews__title">Клиенты об успешном опыте работы с нами</h2>
@@ -231,7 +237,7 @@
               </div>
               <p class="review__text">«Для меня очень важно выбрать лучшее из
                предлагаемого и при этом не выйти за рамки бюджета. Я привык 
-               четко понимать, где и за что я плачу. Выбирая работу с aгентством Travel2Buissnes, я прежде всего выбираю качество, гибкую ценовую
+               четко понимать, где и за что я плачу. Выбирая работу с aгентством Travel2Business, я прежде всего выбираю качество, гибкую ценовую
                политику и уверенность в том, что мне предложат оптимальный 
                вариант, подходящий под мои требования. А по итогу я еще получу
                сводную отчетность по всем предоставленным услугам»</p>
@@ -250,7 +256,7 @@
                   <span class="name__text">Бухгалтер</span>
                 </div>
               </div>
-              <p class="review__text">Сотрудничество с aгентством Travel2Buissnes позволило мне забыть о проблемах согласования форм отчетности, необходимости общаться с разными поставщиками. Я больше не беспокоюсь об изменениях в заказе, потому что знаю, все вопросы по корректировкам в документах Travel2Buissnes берет на себя.</p>
+              <p class="review__text">Сотрудничество с aгентством Travel2Business позволило мне забыть о проблемах согласования форм отчетности, необходимости общаться с разными поставщиками. Я больше не беспокоюсь об изменениях в заказе, потому что знаю, все вопросы по корректировкам в документах Travel2Business берет на себя.</p>
                <div class="review__name-mobile name">
                 <span class="name__item">Ирина Владимировна</span>
                 <span class="name__text">Бухгалтер</span>
@@ -266,7 +272,7 @@
                   <span class="name__text">Секретарь</span>
                 </div>
               </div>
-              <p class="review__text">Мне не нужно тратить драгоценное рабочее время на долгие поиски подходящего варианта проживания или трансфера. Я просто сообщаю своему персональному менеджеру aгентства Travel2Buissnes что нам нужно, и занимаюсь дальше рабочими делами. Даже если у нас какой-то срочный заказ, это не будет проблемой. Кроме того, я всегда спокойна, так как знаю, что мне помогут в решении всех вопросов по моим заказам .
+              <p class="review__text">Мне не нужно тратить драгоценное рабочее время на долгие поиски подходящего варианта проживания или трансфера. Я просто сообщаю своему персональному менеджеру aгентства Travel2Business что нам нужно, и занимаюсь дальше рабочими делами. Даже если у нас какой-то срочный заказ, это не будет проблемой. Кроме того, я всегда спокойна, так как знаю, что мне помогут в решении всех вопросов по моим заказам .
               </p>
                <div class="review__name-mobile name">
                 <span class="name__item">Светлана</span>
@@ -322,6 +328,7 @@
           </div>
         </div>
       </section>
+
       <section id="contacts section4" data-anchor="contacts" class="section contacts">
         <div class="contacts__wrapper">
           <div class="contacts__item">
@@ -369,35 +376,102 @@
               <label class="form__lable" for="comment">Сообщение
                 <textarea class="form__textarea" name="inputTextarea" id="comment" rows="2" required></textarea>
               </label>
-              <input class="form__checkbox" name="inputCheckbox" id="agree" type="checkbox" required>
-              <label class="form__check-lable" for="agree"><span class="form__check-item"></span>Принимаю <a class="form__link" target="_blank" href="policy.html">политику конфиденциальности</a></label>
+              <input class="form__checkbox" name="inputCheckbox" id="agree" type="checkbox" required c>
+              <label class="form__check-lable" for="agree"><span class="form__check-item"></span>Принимаю <a class="form__link js-policy-popup">политику конфиденциальности</a></label>
               <button type="submit" form="form" class="form__button button">Отправить</button>
             </form>
           </div>
           <div class="contacts__map">
-            <img src="img/map.jpg" alt="Регион сервис - адрес">
+            <img src="img/map.jpg" alt="Travel2Business - адрес">
           </div>
         </div>
       </section>
+
     </div>
-  <div id="popup" class="popup">
-    <div class="popup__overlay"></div>
-    <div class="popup__item">
-      <h2>Cпасибо!</h2>
-      <p>Ваша заявка успешно отправлена.</p>
-      <p>С вами свяжутся в ближайшее время.</p>
-      <div class="popup__close">
-      <button class="popup__btn"><span></span></button>
+
+    <div id="thankYou" class="popup">
+      <div class="popup__overlay"></div>
+      <div class="popup__item">
+        <h2>Cпасибо!</h2>
+        <p>Ваша заявка успешно отправлена.</p>
+        <p>С вами свяжутся в ближайшее время.</p>
+        <div class="popup__close">
+        <button class="popup__btn"><span></span></button>
+        </div>
       </div>
     </div>
-  </div>
-  <script src="libs/jquery/jquery.min.js"></script>
+
+    <div id="policy" class="popup">
+      <div class="popup__overlay"></div>
+      <div class="popup__item policy">
+        <h2 class="policy__title">Согласие на обработку персональных данных</h2>
+        <h3 class="policy__subtitle">Политика в отношении обработки персональных данных</h3>
+        <p class="policy__text">
+          <b>1. Общие положения</b><br>
+          Настоящая политика обработки персональных данных составлена в соответствии с требованиями Федерального закона от 27.07.2006. №152-ФЗ «О персональных данных» и определяет порядок обработки персональных данных и меры по обеспечению безопасности персональных данных Общество с ограниченной ответственностью «Регион-сервис» (далее – Оператор).<br>
+          1.1. Оператор ставит своей важнейшей целью и условием осуществления своей деятельности соблюдение прав и свобод человека и гражданина при обработке его персональных данных, в том числе защиты прав на неприкосновенность частной жизни, личную и семейную тайну.<br> 
+          1.2. Настоящая политика Оператора в отношении обработки персональных данных (далее – Политика) применяется ко всей информации, которую Оператор может получить о посетителях веб-сайта http://travel2business.ru.<br><br>
+          <b>2. Основные понятия, используемые в Политике</b><br>
+          2.1. Автоматизированная обработка персональных данных – обработка персональных данных с помощью средств вычислительной техники;<br> 
+          2.2. Блокирование персональных данных – временное прекращение обработки персональных данных (за исключением случаев, если обработка необходима для уточнения персональных данных);<br>
+          2.3. Веб-сайт – совокупность графических и информационных материалов, а также программ для ЭВМ и баз данных,  обеспечивающих их доступность в сети интернет по сетевому адресу http://travel2business.ru;<br> 
+          2.4. Информационная система персональных данных — совокупность содержащихся в базах данных персональных данных, и обеспечивающих их обработку информационных технологий и технических средств;<br>
+          2.5. Обезличивание персональных данных — действия, в результате которых невозможно определить без использования дополнительной информации принадлежность персональных данных конкретному Пользователю или иному субъекту персональных данных;<br> 
+          2.6. Обработка персональных данных – любое действие (операция) или совокупность действий (операций), совершаемых с использованием средств автоматизации или без использования таких средств с персональными данными, включая сбор, запись, систематизацию, накопление, хранение, уточнение (обновление, изменение), извлечение, использование, передачу (распространение, предоставление, доступ), обезличивание, блокирование, удаление, уничтожение персональных данных;<br> 
+          2.7. Оператор – государственный орган, муниципальный орган, юридическое или физическое лицо, самостоятельно или совместно с другими лицами организующие и (или) осуществляющие обработку персональных данных, а также определяющие цели обработки персональных данных, состав персональных данных, подлежащих обработке, действия (операции), совершаемые с персональными данными;<br> 
+          2.8. Персональные данные – любая информация, относящаяся прямо или косвенно к определенному или определяемому Пользователю веб-сайта http://travel2business.ru;<br>
+          2.9. Пользователь – любой посетитель веб-сайта http://travel2business.ru;<br>
+          2.10. Предоставление персональных данных – действия, направленные на раскрытие персональных данных определенному лицу или определенному кругу лиц;<br>
+          2.11. Распространение персональных данных – любые действия, направленные на раскрытие персональных данных неопределенному кругу лиц (передача персональных данных) или на ознакомление с персональными данными неограниченного круга лиц, в том числе обнародование персональных данных в средствах массовой информации, размещение в информационно-телекоммуникационных сетях или предоставление доступа к персональным данным каким-либо иным способом;<br>
+          2.12. Трансграничная передача персональных данных – передача персональных данных на территорию иностранного государства органу власти иностранного государства, иностранному физическому или иностранному юридическому лицу;<br>
+          2.13. Уничтожение персональных данных – любые действия, в результате которых персональные данные уничтожаются безвозвратно с невозможностью дальнейшего восстановления содержания персональных данных в информационной системе персональных данных и (или) результате которых уничтожаются материальные носители персональных данных.<br><br>
+          <b>3. Оператор может обрабатывать следующие персональные данные Пользователя</b><br>
+          3.1. Фамилия, имя, отчество;<br>
+          3.2. Электронный адрес;<br>
+          3.3. Номера телефонов;<br>
+          3.4. Также на сайте происходит сбор и обработка обезличенных данных о посетителях (в т.ч. файлов «cookie») с помощью сервисов интернет-статистики (Яндекс Метрика и Гугл Аналитика и других).<br>
+          3.5. Вышеперечисленные данные далее по тексту Политики объединены общим понятием Персональные данные.<br><br>  
+          <b>4. Цели обработки персональных данных</b><br>
+          4.1. Цель обработки персональных данных Пользователя — информирование Пользователя посредством отправки электронных писем; связь с Пользователем в случае необходимости, в том числе направление уведомлений, информации и запросов, связанных с оказанием услуг, а также обработка заявлений, запросов и заявок Пользователя.<br>
+          4.2. Также Оператор имеет право направлять Пользователю уведомления о новых продуктах и услугах, специальных предложениях и различных событиях. Пользователь всегда может отказаться от получения информационных сообщений, направив Оператору письмо на адрес электронной почты info@travel2business.ru с пометкой «Отказ от уведомлениях о новых продуктах и услугах и специальных предложениях».<br>
+          4.3. Обезличенные данные Пользователей, собираемые с помощью сервисов интернет-статистики, служат для сбора информации о действиях Пользователей на сайте, улучшения качества сайта и его содержания.<br><br>
+          <b>5. Правовые основания обработки персональных данных</b><br>
+          5.1. Оператор обрабатывает персональные данные Пользователя только в случае их заполнения и/или отправки Пользователем самостоятельно через специальные формы, расположенные на сайте http://travel2business.ru. Заполняя соответствующие формы и/или отправляя свои персональные данные Оператору, Пользователь выражает свое согласие с данной Политикой.<br>
+          5.2. Оператор обрабатывает обезличенные данные о Пользователе в случае, если это разрешено в настройках браузера Пользователя (включено сохранение файлов «cookie» и использование технологии JavaScript).<br><br>
+          <b>6. Порядок сбора, хранения, передачи и других видов обработки персональных данных</b><br>Безопасность персональных данных, которые обрабатываются Оператором, обеспечивается путем реализации правовых, организационных и технических мер, необходимых для выполнения в полном объеме требований действующего законодательства в области защиты персональных данных.<br>
+          6.1. Оператор обеспечивает сохранность персональных данных и принимает все возможные меры, исключающие доступ к персональным данным неуполномоченных лиц.<br>
+          6.2. Персональные данные Пользователя никогда, ни при каких условиях не будут переданы третьим лицам, за исключением случаев, связанных с исполнением действующего законодательства.<br>
+          6.3. В случае выявления неточностей в персональных данных, Пользователь может актуализировать их самостоятельно, путем направления Оператору уведомление на адрес электронной почты Оператора info@travel2business.ru с пометкой «Актуализация персональных данных».<br> 
+          6.4. Срок обработки персональных данных является неограниченным. Пользователь может в любой момент отозвать свое согласие на обработку персональных данных, направив Оператору уведомление посредством электронной почты на электронный адрес Оператора info@travel2business.ru с пометкой «Отзыв согласия на обработку персональных данных».<br><br>
+          <b>7. Трансграничная передача персональных данных</b><br>
+          7.1. Оператор до начала осуществления трансграничной передачи персональных данных обязан убедиться в том, что иностранным государством, на территорию которого предполагается осуществлять передачу персональных данных, обеспечивается надежная защита прав субъектов персональных данных.<br>
+          7.2. Трансграничная передача персональных данных на территории иностранных государств, не отвечающих вышеуказанным требованиям, может осуществляться только в случае наличия согласия в письменной форме субъекта персональных данных на трансграничную передачу его персональных данных и/или исполнения договора, стороной которого является субъект персональных данных.<br><br>
+          <b>8. Заключительные положения</b><br>
+          8.1. Пользователь может получить любые разъяснения по интересующим вопросам, касающимся обработки его персональных данных, обратившись к Оператору с помощью электронной почты info@travel2business.ru<br>8.2. В данном документе будут отражены любые изменения политики обработки персональных данных Оператором. Политика действует бессрочно до замены ее новой версией.<br>
+          8.3. Актуальная версия Политики в свободном доступе расположена в сети Интернет по адресу <a target="_blank" href="policy.html">http://travel2business.ru/policy/</a>.<br>
+        </p>
+        <label class="button agree__button js-agree-close" for="agree">Принять</label>
+        <button class="button agree__button agree__button--cancel">Отмена</button>
+        <div class="popup__close">
+        <button class="popup__btn"><span></span></button>
+        </div>
+      </div>
+    </div>
+  </main>
+<!--   <script src="libs/jquery/jquery.min.js"></script>
   <script src="libs/svgxuse/svgxuse.min.js"></script>
-  <script src="libs/validate/jquery.validate.min.js"></script>
   <script src="libs/mask/jquery.maskedinput.min.js"></script>
   <script src="libs/fullpage/jquery.fullpage.js"></script>
   <script src="libs/fullpage/scrolloverflow.min.js"></script>
-  <script src="libs/slick/slick.min.js"></script>
+  <script src="libs/slick/slick.min.js"></script> -->
+  <script src="js/compressed.js"></script>
   <script src="js/main.js"></script>
+<!--   <script src="js/jquery.min.js"></script>
+  <script src="js/svgxuse.min.js"></script>
+  <script src="js/jquery.maskedinput.min.js"></script>
+  <script src="js/jquery.fullpage.min.js"></script>
+  <script src="js/scrolloverflow.min.js"></script>
+  <script src="js/slick.min.js"></script>
+  <script src="js/main.js"></script> -->
 </body>
 </html>
