--- a/app/index.html
+++ b/app/index.html
@@ -2,7 +2,7 @@
 <html lang="ru">
 <head>
   <meta charset="UTF-8">
-  <meta name="description" content="">
+  <meta name="description" content="Агенство Travel2Business – это современное агентство делового туризма. Мы работаем с 2007 года и предоставляем туристические услуги для корпоративных клиентов.">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
   <meta property="og:image" content="path/to/image.jpg">
@@ -356,7 +356,7 @@
                 </a></li>
               </ul>
               <div class="social__private">
-                <a href="legal.html" target="_blank">Юридическая информация</a>
+                <a class="js-legal-popup" =">Юридическая информация</a>
               </div>
             </div>
           </div>
@@ -457,6 +457,36 @@
         </div>
       </div>
     </div>
+
+
+    <div id="legal" class="popup">
+      <div class="popup__overlay"></div>
+      <div class="popup__item legal">
+        <div class="legal__wrapper">
+            <h1 class="legal__title">Юридическая информация</h1>
+<!--             <p class="legal__text">Общество с ограниченной ответственностью «Регион-сервис»<br>
+               Юридический адрес: 197376, Санкт-Петербург, ул.Профессора Попова д.23<br>
+               ОГРН 1107847127519<br>
+               ИНН 7813470069<br>
+               КПП 781301001<br>
+               р/с 40702810163030003806 в СПбФ №2 ПАО «БИНБАНК» г.Санкт-Петербург<br>
+               к/сч 30101810040300000897<br>
+               БИК 044030897<br>
+               ОКПО 65960024<br>
+               ОКВЭД 63.30, 74.1<br>
+               ОКАТО 40288564000<br>
+               ОКТМО 40393000</p>
+            <p class="legal__text">Генеральный директор: Виноградов Сергей Васильевич</p>
+            <p class="legal__text">Свидетельство Ростуризма о включении в Федеральный реестр туроператоров РТО №010799</p> -->
+            <img src="img/rekvisit.jpg" alt="rekvisit" class="legal__image">
+        </div>
+        <div class="popup__close">
+          <button class="popup__btn"><span></span></button>
+        </div>
+      </div>
+    </div>
+
+
   </main>
 <!--   <script src="libs/jquery/jquery.min.js"></script>
   <script src="libs/svgxuse/svgxuse.min.js"></script>
